# nhl-data

./: .gitignore  CHANGELOG.md  README.md  README_old.md
get_data/moneypuck/: README.md  pyproject.toml
get_data/moneypuck/src/: 01_get_moneypuck_data.py  02_write_to_s3.py  list_csvs.py
get_data/src/nhl_api/: README.md  pyproject.toml
python/: pyproject.toml
python/scripts/: get_moneypuck_data.py  write_moneypuck_to_s3.py
python/scripts/nhl_api/: collect_responses.py  get_nhl_api_data.py
python/src/moneypuck/: moneypuck.py
python/src/moneypuck/config/: dir_file_url_config.json  settings.py
python/src/nhl_api/: client.py  session.py
python/src/nhl_api/example_responses/: game_2023020204_landing.json  game_2023020204_play_by_play.json  game_boxscore.json  game_info.json  game_landing.json  game_play_by_play.json  game_shift_charts.json  games_list.json  glossary.json  player_8478402_mcdavid.json  player_8478402_mcdavid_game_log_20232024_regular_season.json  player_8478402_mcdavid_game_log_now.json  player_game_log_current.json  player_game_log_mcdavid.json  player_mcdavid.json  player_spotlight.json  schedule_calendar.json  season_ids.json  standings_date.json  standings_now.json  stats_leaders_goalie_current.json  stats_leaders_goals_limited.json  stats_leaders_skater_20232024_regular.json  stats_leaders_skater_2023_regular.json  stats_leaders_skater_current.json  stats_leaders_skater_goals_limit10.json  team_info_list.json  team_schedule_stl.json  team_scoreboard_stl.json  (+2 more)
python/src/nhl_proj_lineup/: proj_lineup.py
python/src/utility/: aws.py
(+37 files in other folders)
