[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nhl_api", "src/moneypuck", "src/utility"]

[project]
name = "nhl_data"
version = "0.1.0"
description = "NHL hockey data processing and analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.13"

dependencies = [
    "backoff>=2.2.1",
    "boto3>=1.38.27",
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
