[project]
name = "nhl-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bbrewington", email = "brent.brewington@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
nhl-api = "nhl_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
